tests/baselines/reference/functionOverloads41.errors.txt
tests/cases/compiler/functionOverloads41.ts(4,14): error TS2322: Type '{}' is not assignable to type '{ a: boolean; }'.
  Property 'a' is missing in type '{}'.


==== tests/cases/compiler/functionOverloads41.ts (1 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo([{}]);
                 ~~
!!! error TS2322: Type '{}' is not assignable to type '{ a: boolean; }'.
!!! error TS2322:   Property 'a' is missing in type '{}'.
!!! related TS6501 /.ts/lib.es5.d.ts:1284:5: The expected type comes from this index signature.
    